exports[`(.not).toHaveNotFoundStatus > using axios > .not.toHaveNotFoundStatus > fails when response have status code 404 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveNotFoundStatus()</intensity>

Expected status code to not be 404 received:
  <red>404</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 404,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveNotFoundStatus > using axios > .toHaveNotFoundStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveNotFoundStatus()</intensity>

Expected status code to be 404 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveNotFoundStatus > using got > .not.toHaveNotFoundStatus > fails when response have status code 404 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveNotFoundStatus()</intensity>

Expected status code to not be 404 received:
  <red>404</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 404,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveNotFoundStatus > using got > .toHaveNotFoundStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveNotFoundStatus()</intensity>

Expected status code to be 404 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
